Ported to .NET Core 3.1

--- a/.gitignore
+++ b/.gitignore
@@ -47,84 +47,17 @@ Temporary Items
 .apdisk
 *.dll
 *.cache
-Arowana.Test/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-packages/Newtonsoft.Json.9.0.1/lib/net20/Newtonsoft.Json.xml
-packages/Newtonsoft.Json.9.0.1/lib/net45/Newtonsoft.Json.xml
-packages/Newtonsoft.Json.9.0.1/lib/net35/Newtonsoft.Json.xml
-packages/Newtonsoft.Json.9.0.1/lib/net40/Newtonsoft.Json.xml
-Arowana.Test/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-Arowana.Test/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-Arowana.Test/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-Arowana.Test/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-Arowana.Test/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-packages/Newtonsoft.Json.9.0.1/lib/netstandard1.0/Newtonsoft.Json.xml
-packages/Newtonsoft.Json.9.0.1/lib/portable-net40+sl5+wp80+win8+wpa81/Newtonsoft.Json.xml
-packages/Newtonsoft.Json.9.0.1/lib/portable-net45+wp80+win8+wpa81/Newtonsoft.Json.xml
-packages/Newtonsoft.Json.9.0.1/Newtonsoft.Json.9.0.1.nupkg
-packages/Newtonsoft.Json.9.0.1/tools/install.ps1
+packages/
 *.pdb
 *.exe
-PasswordHolder/bin/Debug/Newtonsoft.Json.xml
-PasswordHolder/bin/Debug/NullReferenceException_20170304132805340.txt
-PasswordHolder/bin/Debug/PasswordHolder.exe.config
-TestData/test2.pwd
-TestData/test.pwd
-TestConsole/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-TestConsole/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-TestConsole/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-TestConsole/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-TestConsole/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-TestConsole/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-TestConsole/obj/Release/TestConsole.csproj.FileListAbsolute.txt
-TestConsole/obj/Debug/TestConsole.csproj.FileListAbsolute.txt
-TestConsole/bin/Release/TestConsole.exe.config
-TestConsole/bin/Release/Newtonsoft.Json.xml
-TestConsole/bin/Debug/TestConsole.vshost.exe.manifest
-TestConsole/bin/Debug/TestConsole.vshost.exe.config
-TestConsole/bin/Debug/TestConsole.exe.config
-TestConsole/bin/Debug/Newtonsoft.Json.xml
-TestConsole/bin/Debug/file.dat
-PasswordHolder/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-PasswordHolder/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-PasswordHolder/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-PasswordHolder/obj/Release/PasswordHolder.Properties.Resources.resources
-PasswordHolder/obj/Release/PasswordHolder.PasswordForm.resources
-PasswordHolder/obj/Release/PasswordHolder.MainForm.resources
-PasswordHolder/obj/Release/PasswordHolder.csproj.FileListAbsolute.txt
-PasswordHolder/obj/Release/PasswordHolder.AccountForm.resources
-PasswordHolder/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-PasswordHolder/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-PasswordHolder/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-PasswordHolder/obj/Debug/PasswordHolder.Properties.Resources.resources
-PasswordHolder/obj/Debug/PasswordHolder.PasswordForm.resources
-PasswordHolder/obj/Debug/PasswordHolder.MainForm.resources
-PasswordHolder/obj/Debug/PasswordHolder.csproj.FileListAbsolute.txt
-PasswordHolder/obj/Debug/PasswordHolder.AccountForm.resources
-PasswordHolder/bin/Release/PasswordHolder.vshost.exe.manifest
-PasswordHolder/bin/Release/PasswordHolder.vshost.exe.config
-PasswordHolder/bin/Release/PasswordHolder.exe.config
-PasswordHolder/bin/Debug/PasswordHolder.vshost.exe.manifest
-PasswordHolder/bin/Debug/PasswordHolder.vshost.exe.config
-Arowana.Test/obj/Release/Arowana.Test.csproj.FileListAbsolute.txt
-Arowana.Test/obj/Debug/Arowana.Test.csproj.FileListAbsolute.txt
-Arowana.Test/bin/Release/Newtonsoft.Json.xml
-Arowana.Test/bin/Debug/Newtonsoft.Json.xml
-.vs/Arowana/v16/.suo
-.vs/Arowana/v16/Server/sqlite3/db.lock
-.vs/Arowana/v16/Server/sqlite3/storage.ide
-.vs/Arowana/v16/Server/sqlite3/storage.ide-shm
-.vs/Arowana/v16/Server/sqlite3/storage.ide-wal
-Arowana.Test/bin/Debug/Arowana.dll.config
-Arowana.Test/obj/Debug/Arowana.Test.csproj.CopyComplete
-Arowana/
-packages/Newtonsoft.Json.9.0.1/.signature.p7s
-TestConsole/bin/Debug/Arowana.dll.config
-TestConsole/obj/Debug/TestConsole.csproj.CopyComplete
-PasswordHolder/bin/Debug/Arowana.dll.config
-PasswordHolder/bin/Debug/PasswordHolder.application
-PasswordHolder/bin/Debug/PasswordHolder.exe.manifest
-PasswordHolder/obj/Debug/.NETFramework,Version=v4.5.2.AssemblyAttributes.cs
-PasswordHolder/obj/Debug/PasswordHolder.application
-PasswordHolder/obj/Debug/PasswordHolder.csproj.CopyComplete
-PasswordHolder/obj/Debug/PasswordHolder.exe.manifest
-PasswordHolder/obj/Debug/PasswordHolder.TrustInfo.xml
+TestData/
+.vs/Arowana/
+Arowana/bin/
+Arowana/obj/
+Arowana.Test/bin/
+Arowana.Test/obj/
+PasswordHolder/bin/
+PasswordHolder/obj/
+TestConsole/bin/
+TestConsole/obj/
+**.csproj.user
